# CPP-Terminal-Database

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  index_manager.txt  main.cpp  program_settings.txt  utils.cpp  utils.h  utils.hpp
src/classes/: Database.cpp  Database.h  Database.hpp  Menu.cpp  Menu.h  Menu.hpp  MenuInput.cpp  MenuInput.hpp  MenuLogic.cpp  MenuLogic.hpp  MenuUI.cpp  MenuUI.hpp  Object.cpp  Object.h  Object.hpp
src/files/: index_manager.txt  program_settings.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  very_long_database_name_for_testing.txt
tests/: database_tests.cpp  menu_tests.cpp  object_test.cpp
